--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@supabase/supabase-js": "^2.11.1",
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "node-forge": "^1.3.1"
   }
 }
